Fix some layout and spacing bugs

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -4,19 +4,23 @@
   background-color: $black;
 
   .navbar-brand {
-    color: $white;
+    color: $color-blue-light;
     font-size: 1.2rem;
+
+    &.active {
+      color: $white;
+    }
 
     &:hover,
     &:focus {
-      color: $color-blue-light;
+      color: $white;
     }
 
     & > img {
       height: 40px;
       width: auto;
-      margin-top: -5px;
-      margin-bottom: -5px;
+      margin-top: -4px;
+      margin-bottom: -4px;
     }
   }
 
@@ -29,6 +33,13 @@
   .navbar-collapse {
     li {
       margin-bottom: 0;
+    }
+
+    &.show {
+      li {
+        margin-top: .5rem;
+        margin-bottom: .5rem;
+      }
     }
   }
 
@@ -49,13 +60,16 @@
 
   .nav-item {
     position: relative;
-    a {
+    line-height: 0.9;
+
+    &.active a.nav-link,
+    a.nav-link:hover {
+      color: $white;
+    }
+
+    a.nav-link {
       color: $color-blue-light;
       text-transform: uppercase;
-
-      &:hover {
-        color: $white;
-      }
     }
 
     .circle {
@@ -94,21 +108,26 @@
       transition: all 0.9s;
     }
 
-    &:hover {
-      .circle {
-        display: block;
-        transform: translateX(40px);
-        opacity: 1;
-      }
+    // on iOS, if we have this hover effect, it takes two taps to navigate to a nav link
+    // this is a CSS4 feature supported in recent browsers
+    // if a browser doesn't support the hover media query, the effect will just be disabled
+    @media (hover) {
+      &:hover {
+        .circle {
+          display: block;
+          transform: translateX(40px);
+          opacity: 1;
+        }
 
-      .line {
-        width: 100%;
-        background: #00A3E0;
-      }
+        .line {
+          width: 100%;
+          background: #00A3E0;
+        }
 
-      .line2 {
-        width: 75%;
-        background: #0086D6;
+        .line2 {
+          width: 75%;
+          background: #0086D6;
+        }
       }
     }
   }
